--- a/package.json
+++ b/package.json
@@ -9,14 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.8.0",
-    "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^6.5.0",
     "@radix-ui/react-slot": "^1.1.2",
+    "@tiptap/core": "^2.11.5",
+    "@tiptap/extension-code-block": "^2.11.5",
     "@tiptap/extension-code-block-lowlight": "^2.11.5",
+    "@tiptap/extension-collaboration": "^2.11.5",
+    "@tiptap/extension-collaboration-cursor": "^2.11.5",
     "@tiptap/extension-color": "^2.11.5",
+    "@tiptap/extension-document": "^2.11.5",
+    "@tiptap/extension-dropcursor": "^2.11.5",
+    "@tiptap/extension-highlight": "^2.11.5",
     "@tiptap/extension-image": "^2.11.5",
     "@tiptap/extension-list-item": "^2.11.5",
+    "@tiptap/extension-mention": "^2.11.5",
+    "@tiptap/extension-paragraph": "^2.11.5",
+    "@tiptap/extension-table": "^2.11.5",
+    "@tiptap/extension-text": "^2.11.5",
     "@tiptap/extension-text-align": "^2.11.5",
     "@tiptap/extension-text-style": "^2.11.5",
     "@tiptap/extension-underline": "^2.11.5",
@@ -26,12 +34,14 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.5.0",
+    "highlight.js": "^11.11.1",
     "jodit-react": "^5.2.18",
+    "lowlight": "^3.3.0",
     "lucide": "^0.483.0",
     "lucide-react": "^0.483.0",
     "mongodb": "^6.15.0",
     "next": "15.2.3",
-    "next-auth": "^5.0.0-beta.25",
+    "next-auth": "5.0.0-beta.25",
     "quill": "^2.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -52,7 +62,6 @@
     "eslint-config-next": "15.2.3",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "prisma": "^6.5.0",
     "tailwindcss": "^4",
     "typescript": "5.8.2"
   }
