--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,4 +17,7 @@
     "[typescript]": {
       "editor.defaultFormatter": "vscode.typescript-language-features"
     },
+    "[javascriptreact]": {
+      "editor.defaultFormatter": "vscode.typescript-language-features"
+    },
   }
