--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,4 +20,7 @@
     "[javascriptreact]": {
       "editor.defaultFormatter": "vscode.typescript-language-features"
     },
+    "[prisma]": {
+      "editor.defaultFormatter": "Prisma.prisma"
+    },
   }
